se agrega un boton de compartir al pie de pagina de todas las paginas

--- a/acercade.html
+++ b/acercade.html
@@ -87,8 +87,26 @@
         <section class="footer">
             <h6>Puedes seguirnos también en:</h6>
             <ul>
-                <li><a href="https://www.facebook.com/adagiogitano/" class="fb icono" target="_blank"></a></li>
-                <li><a href="https://www.instagram.com/adagio_gitano/" class="ig icono" target="_blank"></a></li>
+                <li>
+                    <a href="https://www.facebook.com/adagiogitano/" class="fb icono" target="_blank"></a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/adagio_gitano/" class="ig icono" target="_blank"></a>
+                </li>
+                <li>
+                  <div id="fb-root"></div>
+                    <script>
+                    (function(d, s, id) {
+                        var js, fjs = d.getElementsByTagName(s)[0];
+                        if (d.getElementById(id)) return;
+                        js = d.createElement(s);
+                        js.id = id;
+                        js.src = "//connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v2.8&appId=752701358126278";
+                        fjs.parentNode.insertBefore(js, fjs);
+                    }(document, 'script', 'facebook-jssdk'));
+                    </script>
+                    <div class="fb-share-button" data-href="https://adagiogitano.github.io/" data-layout="button_count" data-size="small" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?src=sdkpreparse">Compartir</a>      </div>
+                </li>
             </ul>
         </section>
     </footer>
