--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <!--[if gt IE 8]><!-->
 <html class="no-js" lang="en">
 <!--<![endif]-->
+
 <head>
     <meta charset="UTF-8">
     <title>Adagio Gitano</title>
@@ -12,18 +13,23 @@
     <meta name="robots" content="index, follow" />
     <!-- Descripcion de busquedas -->
     <meta name="description" content="Adagio Gitano es una agrupación Costarricense desde el 2014 con ritmos latinoamericanos como choro, bossa nova, y generos mas reconocidos como lo son el blues, el funk." />
+    <!-- FACEBOOK -->
+    <meta property="og:url" content="https://adagiogitano.github.io/index.html" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Adagio Gitano" />
+    <meta property="og:description" content="Adagio Gitano es una agrupación Costarricense desde el 2014 con ritmos latinoamericanos como choro, bossa nova, y generos mas reconocidos como lo son el blues, el funk." />
+    <meta property="og:image" content="images/logo.png" />
     <!--       HOJAS DE ESTILO         -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">  
+    <link rel="stylesheet" href="css/style.css">
     <!-- Region Pagina -->
-    <link rel="alternate" hreflang="es-CR" href="http://adagiogitano.github.io/"> 
+    <link rel="alternate" hreflang="es-CR" href="http://adagiogitano.github.io/">
     <!--[if lt IE 9]>
             <script src="js/lib/html5-3.6-respond-1.4.2.min.js"></script>
         <![endif]-->
     <!--          Scripts              -->
     <script src="js/lib/jquery-3.1.1.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-     
 </head>
 
 <body class="multimedia">
@@ -31,7 +37,7 @@
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container-fluid">
                 <div class="navbar-header">
-                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                         <span class="sr-only">Adagio Gitano</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -52,121 +58,137 @@
         </nav>
     </header>
     <div class="container-fluid">
-      <div class="row">
-        <div id="carousel" class="carousel slide" data-ride="carousel">
-          <!-- Indicators -->
-          <ol class="carousel-indicators">
-              <li data-target="#carousel" data-slide-to="0" class="active"></li>
-              <li data-target="#carousel" data-slide-to="1"></li>
-              <li data-target="#carousel" data-slide-to="2"></li>
-              <li data-target="#carousel" data-slide-to="3"></li>
-              <li data-target="#carousel" data-slide-to="4"></li>
-              <li data-target="#carousel" data-slide-to="5"></li>
-          </ol>
-          <!-- Wrapper for slides -->
-          <div class="carousel-inner">
-              <div class="item active">
-                  <img src="images/carousel/zinco1.jpg" alt="Adagio Gitano presentacion en el Zinco Jazz Club" class="img-responsive carousel-img" />
-                  <div class="carousel-caption">
-                      <h3>Zinco Jazz Club - Ciudad de México </h3>
-                  </div>
-              </div>
-              <div class="item">
-                  <img src="images/carousel/zinco2.jpg" alt="Adagio Gitano presentacion en el Zinco Jazz Club" class="img-responsive carousel-img" />
-              </div>
-              <div class="item">
-                  <img src="images/carousel/zinco3.jpg" alt="Adagio Gitano presentacion en el Zinco Jazz Club" class="img-responsive carousel-img" />
-              </div>
-              <div class="item">
-                  <img src="images/carousel/breve1.jpg" alt="Adagio Gitano presentacion en el Breve Espacio" class="img-responsive carousel-img" />
-                  <div class="carousel-caption">
-                      <h3>Breve Espacio - Puebla</h3>
-                  </div>
-              </div>
-              <div class="item">
-                  <img src="images/carousel/breve2.jpg" alt="Adagio Gitano presentacion en el Breve Espacio" class="img-responsive carousel-img" />
-              </div>
-              <div class="item">
-                  <img src="images/carousel/breve3.jpg" alt="Adagio Gitano presentacion en el Breve Espacio" class="img-responsive carousel-img" />
-              </div>
-          </div>
-          <!-- Controls -->
-          <a class="left carousel-control" href="#carousel" role="button" data-slide="prev">
-              <span class="glyphicon glyphicon-chevron-left"></span>
-          </a>
-          <a class="right carousel-control" href="#carousel" role="button" data-slide="next">
-              <span class="glyphicon glyphicon-chevron-right"></span>
-          </a>
+        <div class="row">
+            <div id="carousel" class="carousel slide" data-ride="carousel">
+                <!-- Indicators -->
+                <ol class="carousel-indicators">
+                    <li data-target="#carousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#carousel" data-slide-to="1"></li>
+                    <li data-target="#carousel" data-slide-to="2"></li>
+                    <li data-target="#carousel" data-slide-to="3"></li>
+                    <li data-target="#carousel" data-slide-to="4"></li>
+                    <li data-target="#carousel" data-slide-to="5"></li>
+                </ol>
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner">
+                    <div class="item active">
+                        <img src="images/carousel/zinco1.jpg" alt="Adagio Gitano presentacion en el Zinco Jazz Club" class="img-responsive carousel-img" />
+                        <div class="carousel-caption">
+                            <h3>Zinco Jazz Club - Ciudad de México </h3>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="images/carousel/zinco2.jpg" alt="Adagio Gitano presentacion en el Zinco Jazz Club" class="img-responsive carousel-img" />
+                    </div>
+                    <div class="item">
+                        <img src="images/carousel/zinco3.jpg" alt="Adagio Gitano presentacion en el Zinco Jazz Club" class="img-responsive carousel-img" />
+                    </div>
+                    <div class="item">
+                        <img src="images/carousel/breve1.jpg" alt="Adagio Gitano presentacion en el Breve Espacio" class="img-responsive carousel-img" />
+                        <div class="carousel-caption">
+                            <h3>Breve Espacio - Puebla</h3>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="images/carousel/breve2.jpg" alt="Adagio Gitano presentacion en el Breve Espacio" class="img-responsive carousel-img" />
+                    </div>
+                    <div class="item">
+                        <img src="images/carousel/breve3.jpg" alt="Adagio Gitano presentacion en el Breve Espacio" class="img-responsive carousel-img" />
+                    </div>
+                </div>
+                <!-- Controls -->
+                <a class="left carousel-control" href="#carousel" role="button" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left"></span>
+                </a>
+                <a class="right carousel-control" href="#carousel" role="button" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right"></span>
+                </a>
+            </div>
         </div>
-      </div>
     </div>
-
     <main class="container informacion-index">
-      <div class="row">
-        <div class="col-xs-12 col3 text-center">
-          <h1>Adagio Gitano</h1>       
-          <h2>Próximos eventos</h2>   
+        <div class="row">
+            <div class="col-xs-12 col3 text-center">
+                <h1>Adagio Gitano</h1>
+                <h2>Próximos eventos</h2>
+            </div>
         </div>
-      </div>
-
-      <div class="row">
-        <div class="col col-xs-12" >
-          <div class="info-evento">
-            <h3>FERCORI - IMAS</h3>
-            <p>
-              Fecha: 10/12/2016
-            </p>   
-            <p>
-              Hora: 5:30 PM
-            </p>
-            <p>
-              Dirección: Calle 23, San José, Costa Rica, Antigua Aduana. 
-              <a href="https://goo.gl/maps/g3t4U8tgT5w" target="_blank"> Ubicación </a>
-            </p>
-          </div>
+        <div class="row">
+            <div class="col col-xs-12">
+                <div class="info-evento">
+                    <h3>FERCORI - IMAS</h3>
+                    <p>
+                        Fecha: 10/12/2016
+                    </p>
+                    <p>
+                        Hora: 5:30 PM
+                    </p>
+                    <p>
+                        Dirección: Calle 23, San José, Costa Rica, Antigua Aduana.
+                        <a href="https://goo.gl/maps/g3t4U8tgT5w" target="_blank"> Ubicación </a>
+                    </p>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col col-xs-12">
-          <div class="info-evento">
-            <h3>Aserrí</h3>
-            <p class="text-eventos">
-              Fecha: 11/12/2016
-            </p>   
-            <p>
-              Hora: 5:30 PM
-            </p>
-            <p>
-              Dirección: 
-              <a href="#" > Ubicación </a>
-            </p>
-          </div>
-        </div> 
-      </div>
-      <div class="row">   
-        <div class="col col-xs-12">
-          <div class="info-evento">
-            <h3>Rock House Pub</h3>
-            <p>
-              Fecha: 15/12/2016
-            </p>
-            <p>
-              Hora: 8 PM
-            </p>
-            <p>
-              Dirección: 50 mts oeste del ICE de la Florida Tibás, en Plaza Tibas. 
-              <a href="https://goo.gl/maps/5PWXgjiiPCv" target="_blank"> Ubicación </a>
-            </p>
-          </div>
-        </div>    
-      </div>
+        <div class="row">
+            <div class="col col-xs-12">
+                <div class="info-evento">
+                    <h3>Aserrí</h3>
+                    <p class="text-eventos">
+                        Fecha: 11/12/2016
+                    </p>
+                    <p>
+                        Hora: 5:30 PM
+                    </p>
+                    <p>
+                        Dirección:
+                        <a href="#"> Ubicación </a>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col col-xs-12">
+                <div class="info-evento">
+                    <h3>Rock House Pub</h3>
+                    <p>
+                        Fecha: 15/12/2016
+                    </p>
+                    <p>
+                        Hora: 8 PM
+                    </p>
+                    <p>
+                        Dirección: 50 mts oeste del ICE de la Florida Tibás, en Plaza Tibas.
+                        <a href="https://goo.gl/maps/5PWXgjiiPCv" target="_blank"> Ubicación </a>
+                    </p>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
         <section class="footer">
             <h6>Puedes seguirnos también en:</h6>
             <ul>
-                <li><a href="https://www.facebook.com/adagiogitano/" class="fb icono" target="_blank"></a></li>
-                <li><a href="https://www.instagram.com/adagio_gitano/" class="ig icono" target="_blank"></a></li>
+                <li>
+                    <a href="https://www.facebook.com/adagiogitano/" class="fb icono" target="_blank"></a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/adagio_gitano/" class="ig icono" target="_blank"></a>
+                </li>
+                <li>
+                  <div id="fb-root"></div>
+                    <script>
+                    (function(d, s, id) {
+                        var js, fjs = d.getElementsByTagName(s)[0];
+                        if (d.getElementById(id)) return;
+                        js = d.createElement(s);
+                        js.id = id;
+                        js.src = "//connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v2.8&appId=752701358126278";
+                        fjs.parentNode.insertBefore(js, fjs);
+                    }(document, 'script', 'facebook-jssdk'));
+                    </script>
+                    <div class="fb-share-button" data-href="https://adagiogitano.github.io/" data-layout="button_count" data-size="small" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?src=sdkpreparse">Compartir</a>      </div>
+                </li>
             </ul>
         </section>
     </footer>
