--- a/acercade.html
+++ b/acercade.html
@@ -15,7 +15,8 @@
     <link rel="stylesheet" href="css/style.css">
     <!--          Scripts              -->
     <script src="js/lib/jquery-3.1.1.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script></head>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+</head>
 
 <body class="multimedia">
     <header>
@@ -29,12 +30,12 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" href="index.html">
-                    	Adagio Gitano                	</a>
+                        Adagio Gitano                   </a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                    	<li><a href="index.html">Inicio</a></li>                        
+                        <li><a href="index.html">Inicio</a></li>
                         <li><a href="multimedia.html">Multimedia</a></li>
                         <li class="active"><a href="acercade.html">Acerca de<span class="sr-only">(current)</span></a></li>
                         <li><a href="contacto.html">Contacto</a></li>
@@ -44,70 +45,69 @@
         </nav>
     </header>
     <main class="container informacion-acercade">
-
-    	<h2 class="col3">Historia </h2>
+        <h2 class="col3">Historia </h2>
         <div class="row">
             <div class="col-acercade1 col-xs-12 col-sm-6 info">
-            	<div class="text-acercade">
-	                <p class="text-justify">
-	                    Adagio Gitano es una agrupación de Costa Rica desde el 2014 cuando <strong>José Fuentes</strong> y <strong>Manuel Illescas</strong> ambos guitarristas se unen para crear una agrupación experimental y instrumental con la participación de <strong>Gabriel Villavicencio</strong> bajista y <strong>Carlos Jimenez</strong> percusionista.
-	                </p> 
-	                <p class="text-justify">
-            			Inicialmente se trabaja con ritmos latinoamericanos como choro, pero también se logran integrar conceptos como funk, blues, bossa-nova, tango los cuales dieron lugar a la música original para promocionar sus inicios. 
-            		</p>
-            	</div>    
+                <div class="text-acercade">
+                    <p class="text-justify">
+                        Adagio Gitano es una agrupación de Costa Rica desde el 2014 cuando <strong>José Fuentes</strong> y <strong>Manuel Illescas</strong> ambos guitarristas se unen para crear una agrupación experimental y instrumental con la participación de <strong>Gabriel Villavicencio</strong> bajista y <strong>Carlos Jimenez</strong> percusionista.
+                    </p>
+                    <p class="text-justify">
+                        Inicialmente se trabaja con ritmos latinoamericanos como choro, pero también se logran integrar conceptos como funk, blues, bossa-nova, tango los cuales dieron lugar a la música original para promocionar sus inicios.
+                    </p>
+                </div>
             </div>
             <div class="col-acercade1 col-xs-12 col-sm-6 hidden-xs">
-            	<img src="images/origen.jpg" alt="Adagio Gitano" class="img-responsive image-acerca" />
+                <img src="images/origen.jpg" alt="Adagio Gitano" class="img-responsive image-acerca" />
             </div>
         </div>
         <div class="row">
             <div class="col-acercade2 col-xs-12">
-            	<div class="text-acercade1">            		
-            		<p class="text-justify">	
-	                    Luego en agosto del año 2015 se cambió un poco la dinámica del grupo con la voz de <strong>Yanelly Ramírez</strong> con el fin de tocar covers latinoamericanos y seguir promocionando la música instrumental original. Después de varios eventos se llegan a la conclusión de que la participación de Yanelly Ramírez tiene un impacto importante en la agrupación y debido a esto se integra como la voz principal.
-	                </p>
-	                <p class="text-justify">
-            			Luego en setiembre del 2016 el guitarrista <strong>Manuel Illescas</strong> informa sobre su partida de la agrupación Adagio Gitano para concentrarse en otros proyectos lo cual deja un espacio faltante en la agrupación y en la cual se considera la inclusión de un nuevo guitarrista. 
-
-            			A las pocas semanas el guitarrista José Fuentes se encuentra con una antigua amistad <strong>Jair Sherrier</strong> el cual le propone ser el nuevo guitarrista de la agrupación y después de una respuesta afirmativa llega a completar la alineación de la agrupación. 						
-                	</p>	
-            	</div>
+                <div class="text-acercade1">
+                    <p class="text-justify">
+                        Luego en agosto del año 2015 se cambió un poco la dinámica del grupo con la voz de <strong>Yanelly Ramírez</strong> con el fin de tocar covers latinoamericanos y seguir promocionando la música instrumental original. Después de varios eventos se llegan a la conclusión de que la participación de Yanelly Ramírez tiene un impacto importante en la agrupación y debido a esto se integra como la voz principal.
+                    </p>
+                    <p class="text-justify">
+                        Luego en setiembre del 2016 el guitarrista <strong>Manuel Illescas</strong> informa sobre su partida de la agrupación Adagio Gitano para concentrarse en otros proyectos lo cual deja un espacio faltante en la agrupación y en la cual se considera la inclusión de un nuevo guitarrista. A las pocas semanas el guitarrista José Fuentes se encuentra con una antigua amistad <strong>Jair Sherrier</strong> el cual le propone ser el nuevo guitarrista de la agrupación y después de una respuesta afirmativa llega a completar la alineación de la agrupación.
+                    </p>
+                </div>
             </div>
         </div>
         <div class="row">
             <div class="col-acercade3 col-xs-12 hidden-xs">
-            	<div>
-            		<img src="images/actual.jpg" alt="Adagio Gitano" class="img-responsive image-acercade xs-hidden" />
-            	</div>
+                <div>
+                    <img src="images/actual.jpg" alt="Adagio Gitano" class="img-responsive image-acercade xs-hidden" />
+                </div>
             </div>
         </div>
     </main>
     <footer>
         <section class="footer">
-            <h6>Puedes seguirnos tambien: </h6>
-            <ul>
-                <li>
-                    <div id="fb-root"></div>
-                    <script>
-                    (function(d, s, id) {
-                        var js, fjs = d.getElementsByTagName(s)[0];
-                        if (d.getElementById(id)) return;
-                        js = d.createElement(s);
-                        js.id = id;
-                        js.src = "//connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v2.8&appId=752701358126278";
-                        fjs.parentNode.insertBefore(js, fjs);
-                    }(document, 'script', 'facebook-jssdk'));
-                    </script>
-                    <div class="fb-share-button" data-href="https://www.facebook.com/adagiogitano/" data-layout="box_count" data-size="small" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?src=sdkpreparse">Compartir</a></div>
-                </li>
-                <li>
-                    <a href="https://www.facebook.com/adagiogitano/" class="fb icono" target="_blank"></a>
-                </li>
-                <li>
-                    <a href="https://www.instagram.com/adagio_gitano/" class="ig icono" target="_blank"></a>
-                </li>
-            </ul>
+            <h6>Puedes seguirnos tambien </h6>
+            <div class="footer-info">
+                <ul>
+                    <li>
+                        <a href="https://www.facebook.com/adagiogitano/" class="fb icono" target="_blank"></a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com/adagio_gitano/" class="ig icono" target="_blank"></a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-share">
+                <div id="fb-root"></div>
+                <script>
+                (function(d, s, id) {
+                    var js, fjs = d.getElementsByTagName(s)[0];
+                    if (d.getElementById(id)) return;
+                    js = d.createElement(s);
+                    js.id = id;
+                    js.src = "//connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v2.8&appId=752701358126278";
+                    fjs.parentNode.insertBefore(js, fjs);
+                }(document, 'script', 'facebook-jssdk'));
+                </script>
+                <div class="fb-share-button" data-href="https://www.facebook.com/adagiogitano/" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?src=sdkpreparse">Compartir</a></div>
+            </div>
         </section>
     </footer>
 </body>
