--- a/multimedia.html
+++ b/multimedia.html
@@ -57,40 +57,42 @@
             </div>
             <div class="row">
                 <div class="col-xs-12 video playlist col4">
-                    <h2>Versos de Arena</h2> 
+                    <h2>Versos de Arena</h2>
                     <div class="video">
-                        <iframe  src="https://www.youtube.com/embed/uaxmVivHLXc" class="video-iframe" allowfullscreen>
+                        <iframe src="https://www.youtube.com/embed/uaxmVivHLXc" class="video-iframe" allowfullscreen>
                         </iframe>
-                    </div> 
+                    </div>
                 </div>
             </div>
         </div>
     </main>
-     <footer>
+    <footer>
         <section class="footer">
-            <h6>Puedes seguirnos tambien: </h6>
-            <ul>
-                <li>
-                    <div id="fb-root"></div>
-                    <script>
-                    (function(d, s, id) {
-                        var js, fjs = d.getElementsByTagName(s)[0];
-                        if (d.getElementById(id)) return;
-                        js = d.createElement(s);
-                        js.id = id;
-                        js.src = "//connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v2.8&appId=752701358126278";
-                        fjs.parentNode.insertBefore(js, fjs);
-                    }(document, 'script', 'facebook-jssdk'));
-                    </script>
-                    <div class="fb-share-button" data-href="https://www.facebook.com/adagiogitano/" data-layout="box_count" data-size="small" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?src=sdkpreparse">Compartir</a></div>
-                </li>
-                <li>
-                    <a href="https://www.facebook.com/adagiogitano/" class="fb icono" target="_blank"></a>
-                </li>
-                <li>
-                    <a href="https://www.instagram.com/adagio_gitano/" class="ig icono" target="_blank"></a>
-                </li>
-            </ul>
+            <h6>Puedes seguirnos tambien </h6>
+            <div class="footer-info">
+                <ul>
+                    <li>
+                        <a href="https://www.facebook.com/adagiogitano/" class="fb icono" target="_blank"></a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com/adagio_gitano/" class="ig icono" target="_blank"></a>
+                    </li>
+                </ul>
+            </div>
+             <div class="footer-share">
+                <div id="fb-root"></div>
+                <script>
+                (function(d, s, id) {
+                    var js, fjs = d.getElementsByTagName(s)[0];
+                    if (d.getElementById(id)) return;
+                    js = d.createElement(s);
+                    js.id = id;
+                    js.src = "//connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v2.8&appId=752701358126278";
+                    fjs.parentNode.insertBefore(js, fjs);
+                }(document, 'script', 'facebook-jssdk'));
+                </script>
+                <div class="fb-share-button" data-href="https://www.facebook.com/adagiogitano/" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?src=sdkpreparse">Compartir</a></div>
+            </div>
         </section>
     </footer>
     <script src="js/multimedia.js"></script>
